--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -21,12 +21,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Set Node.js 12.x
-        uses: actions/setup-node@v2.5.0
+      - name: Set Node.js
+        uses: actions/setup-node@v4.0.2
         with:
-          node-version: 12.x
+          node-version-file: package.json
 
       - name: Install dependencies
         run: npm ci
