--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: Set Node.js
+      uses: actions/setup-node@v4.0.2
+      with:
+        node-version-file: package.json
+
     - run: npm ci
+
     - run: npm test
 
   test_secret_json:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+
+    - name: Set Node.js
+      uses: actions/setup-node@v4.0.2
+      with:
+        node-version-file: package.json
 
     - uses: ./
       with:
@@ -31,7 +43,12 @@ jobs:
   test_secret_names_json:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+
+    - name: Set Node.js
+      uses: actions/setup-node@v4.0.2
+      with:
+        node-version-file: package.json
 
     - name: Get secret JSON keys
       id: secret_json_keys
@@ -54,7 +71,12 @@ jobs:
   test_secret_names_json_exclusions:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+    
+    - name: Set Node.js
+      uses: actions/setup-node@v4.0.2
+      with:
+        node-version-file: package.json
 
     - name: Get secret JSON keys
       id: secret_json_keys
